<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".HowYouCanHelpPage">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:orientation="vertical">

            <TextView
                android:id="@+id/YouHelpTV1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#283618"
                android:text="@string/YouHelpTV1"
                android:textColor="#FFFFFF"
                android:textSize="30sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/YouHelpIV1"
                android:layout_width="match_parent"
                android:layout_height="176dp"
                android:background="#FFFFFF"
                app:srcCompat="@drawable/recycle" />

            <TextView
                android:id="@+id/YouHelpTV2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:text="@string/YouHelpTV2"
                android:textColor="#2E2C2C" />

            <ImageView
                android:id="@+id/YouHelpIV2"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:background="#FFFFFF"
                app:srcCompat="@drawable/bag" />

            <TextView
                android:id="@+id/YouHelpTV3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:text="@string/YouHelpTV3"
                android:textColor="#2E2C2C" />

            <ImageView
                android:id="@+id/YouHelpIV3"
                android:layout_width="match_parent"
                android:layout_height="343dp"
                android:background="#FFFFFF"
                app:srcCompat="@drawable/reuse" />

            <TextView
                android:id="@+id/YouHelpTV4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:text="@string/YouHelpTV4"
                android:textColor="#2E2C2C" />

            <Button
                android:id="@+id/YouHelpButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/YouHelpButton"
                app:backgroundTint="#283618" />

            <TextView
                android:id="@+id/YouHelpTV5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/YouHelpTV5"
                android:textAllCaps="true"
                android:textColor="#2E2C2C"
                android:textSize="14sp"
                android:textStyle="bold|italic" />

            <ImageButton
                android:id="@+id/YouHelpImButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/signs" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>