<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#364723"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/RecycleAndReuseTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:background="#364723"
        android:text="@string/RecycleAndReuseTV"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/BestRecyclingCountriesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="81dp"
        android:background="#5B6C47"
        android:text="@string/BestRecyclingCountriesButton"
        app:backgroundTint="#59713E"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/EnvironmentalImpactButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginBottom="24dp"
        android:background="#5B6C47"
        android:text="@string/EnvironmentalImpactButton"
        app:backgroundTint="#59713E"
        app:layout_constraintBottom_toTopOf="@+id/BestRecyclingCountriesButton"
        app:layout_constraintStart_toStartOf="@+id/BestRecyclingCountriesButton" />

    <Button
        android:id="@+id/HowYouCanHelpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="28dp"
        android:background="#5B6C47"
        android:text="@string/HowYouCanHelpButton"
        app:backgroundTint="#59713E"
        app:layout_constraintBottom_toTopOf="@+id/EnvironmentalImpactButton"
        app:layout_constraintStart_toStartOf="@+id/EnvironmentalImpactButton" />

    <TextView
        android:id="@+id/RAndRTV2"
        android:layout_width="377dp"
        android:layout_height="264dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="136dp"
        android:background="#364723"
        android:text="@string/RAndRTV2"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>